<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
    </group>
    <group android:id="@+id/menu_group">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_toko"
            android:title="@string/menu_menu" />
    </group>
    <group android:id="@+id/cart_group">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/cart" />
    </group>

    <group android:id="@+id/view_orders_group">
        <item
            android:id="@+id/nav_view_orders"
            android:icon="@drawable/ic_shipping"
            android:title="@string/orders" />
    </group>

    <group >
        <item
            android:id="@+id/nav_update_info"
            android:icon="@drawable/ic_upgrade"
            android:title="@string/update_info" />
    </group>

    <group android:id="@+id/user_group">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/sign_out" />
    </group>

<!--        <item-->
<!--            android:id="@+id/nav_food_detail"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_signout" />-->
<!--        <item-->
<!--            android:id="@+id/nav_tools"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_food_list" />-->

</menu>
